--- a/data/news
+++ b/data/news
@@ -12,7 +12,7 @@
         "start_date": "1664577165000",
         "start_date_string":"28 de septiembre de 2022",
         "end_date": "1664577165000",
-        "title": "¡Nuevo Obtengan una visión cósmica con nuestro nuevo evento Estrellas de la Evolución!",
+        "title": "¡Obtengan una visión cósmica con nuestro nuevo evento Estrellas de la Evolución!",
         "sub_title": "",
         "thumbnail": "https://lh3.googleusercontent.com/2Z4nTBRTxs4AdiqyS97G1_8pckZNYfo2hCbKM8-8nZ38fjMpoTkBy_ccW0xOR5CsCBtUtdxf-Z1O1mVS9cncseJUl_l6uVieF06Y1bGccNUHnQ=e365-w800",
         "image_url": "https://lh3.googleusercontent.com/2Z4nTBRTxs4AdiqyS97G1_8pckZNYfo2hCbKM8-8nZ38fjMpoTkBy_ccW0xOR5CsCBtUtdxf-Z1O1mVS9cncseJUl_l6uVieF06Y1bGccNUHnQ=s0",
