--- a/data/news
+++ b/data/news
@@ -19,7 +19,7 @@
         "description": "Entrenadores: En Pokémon GO pueden evolucionar y crecer con sus Pokémon de muchas maneras, y es hora de celebrarlo con un nuevo evento: ¡Estrellas de la Evolución! La estrella del evento es Cosmoem, el Pokémon Protostrella, que hará su debut en Pokémon GO. También pueden esperar una investigación de campo centrada en la evolución y un desafío de colección que otorga objetos de Evolución. Sigan leyendo para conocer más detalles.",
         "video_url": "https://youtu.be/Ooik5ck_6YQ",
           "page_url": "https://pokemongolive.com/es_mx/post/evolving-stars-2022/",
-           "pokemon_name": "",
+           "pokemon_name": "Cosmoem",
              "pokemon_num": ""
       },
       {
