--- a/data/news
+++ b/data/news
@@ -20,7 +20,7 @@
         "video_url": "https://youtu.be/Ooik5ck_6YQ",
           "page_url": "https://pokemongolive.com/es_mx/post/evolving-stars-2022/",
            "pokemon_name": "Cosmoem",
-             "pokemon_num": ""
+             "pokemon_num": "790"
       },
       {
         "id": "2",
