--- a/data/news
+++ b/data/news
@@ -7,23 +7,53 @@
     "limit": 0,
     "offset": 0,
     "results": [
+       {
+        "id": "7",
+        "start_date": "1664577165000",
+        "start_date_string":"28 de septiembre de 2022",
+        "end_date": "1664577165000",
+        "title": "Wiglett - Pokédex Escarlata y Púrpura",
+        "sub_title": "Wiglett, en la pokedex",
+        "thumbnail": "https://tpc.googlesyndication.com/simgad/14513510210682115672?sqp=4sqPyQQrQikqJwhfEAEdAAC0QiABKAEwCTgDQPCTCUgAUAFYAWBfcAJ4AcUBLbKdPg&rs=AOga4qmk5iCYWdYqNcDteBYbdgj9yZ16kA",
+        "image_url": "https://www.cpokemon.com/wp-content/uploads/2022/09/wiglett-captura-pokemon-escarlata-purpura-800x450.jpg.webp",
+        "description": "Wiglett (ウミディグダ Umidiguda en japonés) es un Pokémon de tipo Agua introducido en la novena generación de Pokémon Escarlata y Púrpura (Scarlet/Violet) para Nintendo Switch. El Pokémon Cóngrido, fue revelado el 28 de septiembre de 2022. \n Descripción \nCon su olfato excepcional, Wiglett puede percibir olores que estén hasta a 20 metros de distancia. Es un Pokémon asustadizo y se mantiene alerta de todo lo que ocurre a su alrededor. Si su olfato detecta la presencia de otro Pokémon en la zona, se mete bajo la arena para ocultarse. \n Wiglett se alimenta sacando su cuerpo a la superficie. Su cuerpo debajo de la arena es un misterio y se desconoce cuanto puede llegar a medir realmente. Su gran parecido con Diglett podría ser una coincidencia, resultado de la adaptación que tuvo a su entorno.",
+        "video_url": "https://youtu.be/VLgxOH-mmTo",
+          "page_url": "",
+           "pokemon_name": "",
+             "pokemon_num": ""
+      },
       {
-        "id": "1",
+        "id": "6",
+        "start_date": "1664577165000",
+        "start_date_string":"28 de septiembre de 2022",
+        "end_date": "1664577165000",
+        "title": "Pokémon World Ecological Society presenta a Wiglett, un nuevo Pokémon de Escarlata y Púrpura",
+        "sub_title": "Wiglett, un nuevo pokemon",
+        "thumbnail": "https://lh3.googleusercontent.com/2Z4nTBRTxs4AdiqyS97G1_8pckZNYfo2hCbKM8-8nZ38fjMpoTkBy_ccW0xOR5CsCBtUtdxf-Z1O1mVS9cncseJUl_l6uVieF06Y1bGccNUHnQ=e365-w800",
+        "image_url": "https://www.cpokemon.com/wp-content/uploads/2022/09/wiglett-nuevo-pokemon-escarlata-purpura.jpg.webp",
+        "description": "Durante la transmisión del Pokémon World Ecological Society, se reveló a un nuevo Pokémon para la novena generación de Pokémon Escarlata y Púrpura (Scarlet & Violet).  \nEn la transmisión, subtitulada en ingles, hubo varios actores comentando sobre el nuevo Pokémon, cada uno hablando en su idioma. Este nuevo Pokémon de la región de Paldea se llama Wiglett, y guarda un parecido con Diglett. Si bien se desconoce su tipo, este Pokémon, junto con Diglett introducen un nuevo concepto del mundo real al juego, la evolución convergente. \nLa evolución convergente es un proceso en el que organismos ocupan entornos similares y suelen parecerse entre sí, aunque su relación filogenética sea muy lejana. \n",
+        "video_url": "https://youtu.be/VLgxOH-mmTo",
+          "page_url": "",
+           "pokemon_name": "",
+             "pokemon_num": ""
+      },
+      {
+        "id": "5",
         "start_date": "1664577165000",
         "start_date_string":"28 de septiembre de 2022",
         "end_date": "1664577165000",
         "title": "¡Obtengan una visión cósmica con nuestro nuevo evento Estrellas de la Evolución!",
-        "sub_title": "",
+        "sub_title": "Estrellas de la Evolución",
         "thumbnail": "https://lh3.googleusercontent.com/2Z4nTBRTxs4AdiqyS97G1_8pckZNYfo2hCbKM8-8nZ38fjMpoTkBy_ccW0xOR5CsCBtUtdxf-Z1O1mVS9cncseJUl_l6uVieF06Y1bGccNUHnQ=e365-w800",
         "image_url": "https://lh3.googleusercontent.com/2Z4nTBRTxs4AdiqyS97G1_8pckZNYfo2hCbKM8-8nZ38fjMpoTkBy_ccW0xOR5CsCBtUtdxf-Z1O1mVS9cncseJUl_l6uVieF06Y1bGccNUHnQ=s0",
-        "description": "Entrenadores: En Pokémon GO pueden evolucionar y crecer con sus Pokémon de muchas maneras, y es hora de celebrarlo con un nuevo evento: ¡Estrellas de la Evolución! La estrella del evento es Cosmoem, el Pokémon Protostrella, que hará su debut en Pokémon GO. También pueden esperar una investigación de campo centrada en la evolución y un desafío de colección que otorga objetos de Evolución. Sigan leyendo para conocer más detalles.",
+        "description": "Entrenadores: \n ;Nos complace anunciar el evento Estrellas de la Evolución! No pierdas de vista a la estrella de este evento: ¡el Pokémon de tipo Psíquico Cosmoem! Sigue leyendo para conocer más detalles. \nFechas y horas: \n Del miércoles 5 de octubre a las 10 a. m. al martes 11 de octubre de 2022 a las 8 p. m. en tu hora local. ¡La historia de la Temporada de la Luz sigue su curso! ¡Sigue la historia de la Temporada de la Luz! Un nuevo capítulo de la investigación especial de la temporada se desbloqueará durante el evento Estrellas de la Evolución; complétalo para dar un paso más en tu estelar aventura con Cosmog. ¡Y no te olvides de completar los cuatro desafíos de colección centrados en evolucionar Pokémon! Día de incursiones de Mega-Gyarados El día de incursiones de Mega-Gyarados tendrá lugar el sábado 8 de octubre de 2022 de 2 p.m. a 5 p. m. en tu hora local. \n* Mega-Gyarados aparecerá con más frecuencia en incursiones. \n* Podrás obtener hasta cinco pases de incursión adicionales al dar vueltas a fotodiscos en Gimnasios. \n* Tendrás una mayor probabilidad de encontrarte con Gyarados variocolor.",
         "video_url": "https://youtu.be/Ooik5ck_6YQ",
           "page_url": "https://pokemongolive.com/es_mx/post/evolving-stars-2022/",
            "pokemon_name": "Cosmoem",
              "pokemon_num": "790"
       },
       {
-        "id": "2",
+        "id": "4",
         "start_date": "1664577165000",
             "start_date_string":"20 de septiembre de 2022",
         "end_date": "1664577165000",
@@ -54,7 +84,7 @@
              "pokemon_num": "607"
       },
       {
-        "id": "4",
+        "id": "2",
         "start_date": "1664577165000",
            "start_date_string":"12 de septiembre de 2022",
         "end_date": "1664577165000",
@@ -69,7 +99,7 @@
              "pokemon_num": ""
       },
       {
-        "id": "5",
+        "id": "1",
         "start_date": "1664577165000",
            "start_date_string":"7 de septiembre de 2022",
         "end_date": "1664577165000",
