--- a/data/news
+++ b/data/news
@@ -14,6 +14,7 @@
         "end_date": "1664577165000",
         "title": "Wiglett - Pokédex Escarlata y Púrpura",
         "sub_title": "Wiglett, en la pokedex",
+            "img_new_pokemon": "https://www.cpokemon.com/wp-content/uploads/2022/09/wiglett-artwork-pokemon-escarlata-purpura-415x450.png.webp",
         "thumbnail": "https://tpc.googlesyndication.com/simgad/14513510210682115672?sqp=4sqPyQQrQikqJwhfEAEdAAC0QiABKAEwCTgDQPCTCUgAUAFYAWBfcAJ4AcUBLbKdPg&rs=AOga4qmk5iCYWdYqNcDteBYbdgj9yZ16kA",
         "image_url": "https://www.cpokemon.com/wp-content/uploads/2022/09/wiglett-captura-pokemon-escarlata-purpura-800x450.jpg.webp",
         "description": "Wiglett (ウミディグダ Umidiguda en japonés) es un Pokémon de tipo Agua introducido en la novena generación de Pokémon Escarlata y Púrpura (Scarlet/Violet) para Nintendo Switch. El Pokémon Cóngrido, fue revelado el 28 de septiembre de 2022. \n Descripción \nCon su olfato excepcional, Wiglett puede percibir olores que estén hasta a 20 metros de distancia. Es un Pokémon asustadizo y se mantiene alerta de todo lo que ocurre a su alrededor. Si su olfato detecta la presencia de otro Pokémon en la zona, se mete bajo la arena para ocultarse. \n Wiglett se alimenta sacando su cuerpo a la superficie. Su cuerpo debajo de la arena es un misterio y se desconoce cuanto puede llegar a medir realmente. Su gran parecido con Diglett podría ser una coincidencia, resultado de la adaptación que tuvo a su entorno.",
