--- a/data/news
+++ b/data/news
@@ -17,8 +17,8 @@
             "img_new_pokemon": "https://www.cpokemon.com/wp-content/uploads/2022/09/wiglett-artwork-pokemon-escarlata-purpura-415x450.png.webp",
         "thumbnail": "https://i2.wp.com/www.cpokemon.com/wp-content/uploads/2022/09/wiglett-pokedex-pokemon-escarlata-purpura.jpg?ssl=1&resize=300%2C170&zoom=2",
         "image_url": "https://www.cpokemon.com/wp-content/uploads/2022/09/wiglett-captura-pokemon-escarlata-purpura-800x450.jpg.webp",
-        "description": "<b>Wiglett (ウミディグダ Umidiguda en japonés)</b> es un Pokémon de tipo Agua introducido en la novena generación de Pokémon Escarlata y Púrpura (Scarlet/Violet) para Nintendo Switch. El Pokémon Cóngrido, fue revelado el 28 de septiembre de 2022. \n Descripción \nCon su olfato excepcional, Wiglett puede percibir olores que estén hasta a 20 metros de distancia. Es un Pokémon asustadizo y se mantiene alerta de todo lo que ocurre a su alrededor. Si su olfato detecta la presencia de otro Pokémon en la zona, se mete bajo la arena para ocultarse. \n Wiglett se alimenta sacando su cuerpo a la superficie. Su cuerpo debajo de la arena es un misterio y se desconoce cuanto puede llegar a medir realmente. Su gran parecido con Diglett podría ser una coincidencia, resultado de la adaptación que tuvo a su entorno.",
-        "video_url": "https://youtu.be/VLgxOH-mmTo",
+        "description": "Wiglett (ウミディグダ Umidiguda en japonés) es un Pokémon de tipo Agua introducido en la novena generación de Pokémon Escarlata y Púrpura (Scarlet/Violet) para Nintendo Switch. El Pokémon Cóngrido, fue revelado el 28 de septiembre de 2022. \n Descripción \nCon su olfato excepcional, Wiglett puede percibir olores que estén hasta a 20 metros de distancia. Es un Pokémon asustadizo y se mantiene alerta de todo lo que ocurre a su alrededor. Si su olfato detecta la presencia de otro Pokémon en la zona, se mete bajo la arena para ocultarse. \n Wiglett se alimenta sacando su cuerpo a la superficie. Su cuerpo debajo de la arena es un misterio y se desconoce cuanto puede llegar a medir realmente. Su gran parecido con Diglett podría ser una coincidencia, resultado de la adaptación que tuvo a su entorno.",
+        "video_url": "-bnwzMUu8Gk",
           "page_url": "",
            "pokemon_name": "",
              "pokemon_num": ""
@@ -32,8 +32,8 @@
         "sub_title": "Wiglett, un nuevo pokemon",
         "thumbnail": "https://i0.wp.com/www.cpokemon.com/wp-content/uploads/2022/09/wiglett-nuevo-pokemon-escarlata-purpura.jpg?ssl=1&resize=300%2C170&zoom=2",
         "image_url": "https://www.cpokemon.com/wp-content/uploads/2022/09/wiglett-nuevo-pokemon-escarlata-purpura.jpg.webp",
-        "description": "Durante la transmisión del Pokémon World Ecological Society, se reveló a un nuevo Pokémon para la novena generación de Pokémon Escarlata y Púrpura (Scarlet & Violet).  \nEn la transmisión, subtitulada en ingles, hubo varios actores comentando sobre el nuevo Pokémon, cada uno hablando en su idioma. Este nuevo Pokémon de la región de Paldea se llama Wiglett, y guarda un parecido con Diglett. Si bien se desconoce su tipo, este Pokémon, junto con Diglett introducen un nuevo concepto del mundo real al juego, la evolución convergente. \nLa evolución convergente es un proceso en el que organismos ocupan entornos similares y suelen parecerse entre sí, aunque su relación filogenética sea muy lejana. \n",
-        "video_url": "https://youtu.be/VLgxOH-mmTo",
+        "description": "Durante la transmisión del Pokémon World Ecological Society, se reveló a un nuevo Pokémon para la novena generación de Pokémon Escarlata y Púrpura (Scarlet & Violet).  \n\nEn la transmisión, subtitulada en ingles, hubo varios actores comentando sobre el nuevo Pokémon, cada uno hablando en su idioma. Este nuevo Pokémon de la región de Paldea se llama Wiglett, y guarda un parecido con Diglett. \n\nSi bien se desconoce su tipo, este Pokémon, junto con Diglett introducen un nuevo concepto del mundo real al juego, la evolución convergente. \nLa evolución convergente es un proceso en el que organismos ocupan entornos similares y suelen parecerse entre sí, aunque su relación filogenética sea muy lejana. \n",
+        "video_url": "VLgxOH-mmTo",
           "page_url": "",
            "pokemon_name": "",
              "pokemon_num": ""
@@ -47,8 +47,8 @@
         "sub_title": "Estrellas de la Evolución",
         "thumbnail": "https://lh3.googleusercontent.com/2Z4nTBRTxs4AdiqyS97G1_8pckZNYfo2hCbKM8-8nZ38fjMpoTkBy_ccW0xOR5CsCBtUtdxf-Z1O1mVS9cncseJUl_l6uVieF06Y1bGccNUHnQ=e365-w800",
         "image_url": "https://lh3.googleusercontent.com/2Z4nTBRTxs4AdiqyS97G1_8pckZNYfo2hCbKM8-8nZ38fjMpoTkBy_ccW0xOR5CsCBtUtdxf-Z1O1mVS9cncseJUl_l6uVieF06Y1bGccNUHnQ=s0",
-        "description": "Entrenadores: \n ;Nos complace anunciar el evento Estrellas de la Evolución! No pierdas de vista a la estrella de este evento: ¡el Pokémon de tipo Psíquico Cosmoem! Sigue leyendo para conocer más detalles. \nFechas y horas: \n Del miércoles 5 de octubre a las 10 a. m. al martes 11 de octubre de 2022 a las 8 p. m. en tu hora local. ¡La historia de la Temporada de la Luz sigue su curso! ¡Sigue la historia de la Temporada de la Luz! Un nuevo capítulo de la investigación especial de la temporada se desbloqueará durante el evento Estrellas de la Evolución; complétalo para dar un paso más en tu estelar aventura con Cosmog. ¡Y no te olvides de completar los cuatro desafíos de colección centrados en evolucionar Pokémon! Día de incursiones de Mega-Gyarados El día de incursiones de Mega-Gyarados tendrá lugar el sábado 8 de octubre de 2022 de 2 p.m. a 5 p. m. en tu hora local. \n* Mega-Gyarados aparecerá con más frecuencia en incursiones. \n* Podrás obtener hasta cinco pases de incursión adicionales al dar vueltas a fotodiscos en Gimnasios. \n* Tendrás una mayor probabilidad de encontrarte con Gyarados variocolor.",
-        "video_url": "https://youtu.be/Ooik5ck_6YQ",
+        "description": "Entrenadores: \n\nEn Pokémon GO pueden evolucionar y crecer con sus Pokémon de muchas maneras, y es hora de celebrarlo con un nuevo evento: ¡Estrellas de la Evolución! \n\nLa estrella del evento es Cosmoem, el Pokémon Protostrella, que hará su debut en Pokémon GO. También pueden esperar una investigación de campo centrada en la evolución y un desafío de colección que otorga objetos de Evolución. Sigan leyendo para conocer más detalles. \n\nEstrellas de la Evolución \n\nDesde el miércoles, 5 de octubre de 2022 a las 10:00 hasta el domingo, 11 de octubre de 2022 a las 20:00 (hora local). \n\n¡La historia de la Temporada de Luz se desarrolla! \n\nUna nueva parte de la investigación especial de la temporada se desbloqueará durante el evento Estrellas de la Evolución; complétenla para dar un paso más en su aventura estelar con Cosmog.\n\nCosmoem \n\nCosmoem hará su debut en Pokémon GO. \n\nLos Entrenadores podrán hacer evolucionar a Cosmog en Cosmoem utilizando 25 caramelos Cosmog. Y no se preocupen por evolucionar su único Cosmog: se rumorea que los Entrenadores tendrán la oportunidad de encontrar más Cosmog en un futuro lejano.",
+        "video_url": "Ooik5ck_6YQ",
           "page_url": "https://pokemongolive.com/es_mx/post/evolving-stars-2022/",
            "pokemon_name": "Cosmoem",
              "pokemon_num": "790"
@@ -64,7 +64,7 @@
         "thumbnail": "https://lh3.googleusercontent.com/IzfjRjjW7xKrW6E9gudgRL9zPzGltIcgcvsorHaNE5soPPZOxHMv8QVozBnNDrAuK1KKqqGoNFilcL5ExmiSNxkwEkNildt5f-Or0gdnRjeFIy4=e365-w800",
         "image_url": "https://lh3.googleusercontent.com/IzfjRjjW7xKrW6E9gudgRL9zPzGltIcgcvsorHaNE5soPPZOxHMv8QVozBnNDrAuK1KKqqGoNFilcL5ExmiSNxkwEkNildt5f-Or0gdnRjeFIy4=s0",
         "description": "Entrenadores: Mareanie y varios Pokémon que lucen la última tendencia harán sus debuts en la pasarela en Pokémon GO. Furfrou también regresa para brillar en el escenario en sus varias formas. Estén atentos a los demás Pokémon a la moda que están listos para ser tendencia en estado salvaje, mediante tareas de investigación y a partir de los Huevos.",
-        "videoUrl": "https://youtu.be/Ooik5ck_6YQ",
+        "videoUrl": "Ooik5ck_6YQ",
                "page_url": "https://pokemongolive.com/es_mx/post/fashion-week-2022/",
                      "pokemon_name": "",
              "pokemon_num": ""
@@ -75,11 +75,11 @@
           "start_date_string":"19 de septiembre de 2022",
         "end_date": "1664577165000",
         "title": "Día de la Comunidad de octubre de 2022: Litwick",
-        "sub_title": "¡Día de la Comunidad: Roggenrola!",
+        "sub_title": "¡Día de la Comunidad: Litwick!",
         "thumbnail": "https://lh3.googleusercontent.com/8BPz6H64TzD-0YuVt_Wz7oFjg3gGQ07T_nHcIR_zlKAcCZmEdxOj0ZstmeUybWMSlHkFP4p9RZ8mBRn8NyrBf-IaDjnC2AFTJHnnIjftX9aZ=e365-w800",
         "image_url": "https://lh3.googleusercontent.com/8BPz6H64TzD-0YuVt_Wz7oFjg3gGQ07T_nHcIR_zlKAcCZmEdxOj0ZstmeUybWMSlHkFP4p9RZ8mBRn8NyrBf-IaDjnC2AFTJHnnIjftX9aZ=s0",
         "description": "Sábado, 15 de octubre de 2022, de 14:00 a 17:00 (hora local) Entrenadores: ¡Nos complace anunciar que Litwick, el Pokémon Vela, será el protagonista del Día de la Comunidad de octubre!",
-        "videoUrl": "https://youtu.be/Ooik5ck_6YQ",
+        "videoUrl": "",
          "page_url": "https://pokemongolive.com/es_mx/post/community-day-october-2022-litwick/",
                "pokemon_name": "Litwick",
              "pokemon_num": "607"
@@ -94,7 +94,7 @@
         "thumbnail": "https://lh3.googleusercontent.com/MKmsOs7w1Zk5-QdMonL2ldPzleMfNU2tIs6iOptdW9ozzl9NF7YYhc9C6H2sxdQQoA3z-x2DGLub_h2xYzZ8YQktgV8t0eCq7xtD7BO_TIBJCw=e365-w800",
         "image_url": "https://lh3.googleusercontent.com/MKmsOs7w1Zk5-QdMonL2ldPzleMfNU2tIs6iOptdW9ozzl9NF7YYhc9C6H2sxdQQoA3z-x2DGLub_h2xYzZ8YQktgV8t0eCq7xtD7BO_TIBJCw=s0",
         "description": "Entrenadores: ¡A las armas! Los Ultraentes Celesteela y Kartana están emergiendo en Ultraumbrales de todo el mundo. Han avistado a Celesteela al sur del ecuador y a Kartana al norte. También están apareciendo otros Pokémon de tipo Acero por la naturaleza, ¡entre ellos Togedemaru, el Pokémon Bolita! Incluso hay otros que están empezando a armarse, como Mega-Aggron, ¡que debutará en las Megaincursiones de Pokémon GO! No podemos esperar a ver cómo los Entrenadores se enfrentan a estos desafíos con sus Pokémon de tipo Acero. Es el momento de conmemorar a los Pokémon más duros del mundo. ¡Vamos!",
-        "videoUrl": "https://youtu.be/Ooik5ck_6YQ",
+        "videoUrl": "n1rpuYsEot0",
           "page_url": "https://pokemongolive.com/es_mx/post/test-your-mettle/",
                     "pokemon_name": "",
              "pokemon_num": ""
@@ -109,7 +109,7 @@
         "thumbnail": "https://lh3.googleusercontent.com/N97SGHEpUyoSnOrth76oI05jpBGXuadccj8iF_VLtjFKGOP3eHjp5fhoNMEyGPoL2EF1C2cO6xbs8NWwW1D7aluubVqhDOiJJfQvu1hDtNwM=e365-w800",
         "image_url": "https://lh3.googleusercontent.com/N97SGHEpUyoSnOrth76oI05jpBGXuadccj8iF_VLtjFKGOP3eHjp5fhoNMEyGPoL2EF1C2cO6xbs8NWwW1D7aluubVqhDOiJJfQvu1hDtNwM=s0",
         "description": "Domingo, 18 de septiembre de 2022, de 14:00 a 17:00 (hora local) Entrenadores: Nos complace anunciar que Roggenrola, el Pokémon Manto, será el destacado durante el Día de la Comunidad de septiembre.",
-        "videoUrl": "https://youtu.be/Ooik5ck_6YQ",
+        "videoUrl": "",
           "page_url": "https://pokemongolive.com/es_mx/post/community-day-september-2022-roggenrola/",
                     "pokemon_name": "Roggenrola",
              "pokemon_num": "524"
