--- a/data/news
+++ b/data/news
@@ -7,6 +7,39 @@
     "limit": 0,
     "offset": 0,
     "results": [
+    
+    {
+        "id": "9",
+        "start_date": "1664577165000",
+        "start_date_string":"06 de octubre de 2022",
+        "end_date": "1664577165000",
+        "title": "Pokémon Scarlet y Violet: una nueva criatura y más mecánicas se muestran en el nuevo tráiler",
+        "sub_title": "Farigiraf un nuevo Pokémon",
+            "img_new_pokemon": "https://www.cpokemon.com/wp-content/uploads/2022/10/scarlet-violet-pokemon-farigiraf-2-365x450.png.webp",
+        "thumbnail": "https://www.cpokemon.com/wp-content/uploads/2022/10/scarlet-violet-pokemon-farigiraf-2-365x450.png.webp",
+        "image_url": "https://www.cpokemon.com/wp-content/uploads/2022/10/habilidad-rumia-farigiraf-pokemonscarletviolet-795x450.jpg.webp",
+        "description": "Farigiraf es el resultado de la evolución de los Girafarig que viven en la región de Paldea. Su cabeza principal y la de su cola se han fusionado para formar una sola. Los dos cerebros de Farigiraf están conectados por sus gruesos nervios, incrementando su energía psíquica, y gracias a eso puede emitir ondas psíquicas desde la antena de su cabeza. \n\n Rumia \n\n Farigiraf tiene una nueva habilidad llamada Rumia (Cud Chew). Cuando un Pokémon con esta habilidad come una Baya, puede comer una más al final del turno siguiente. \n\n Cola Armadura \n\nTambién tiene otra nueva habilidad presentada en estos juegos llamada Cola Armadura (Armor Tail). Esta habilidad hace que los oponentes no puedan utilizar sus movimientos con prioridad. \n\nDatos de Farigiraf\n\n* Categoría: Pokémon Gran Cuello\n* Tipo: Normal y Psíquico \n* Altura: 3,2 m \n* Peso: 160 kg \n* Habilidad: Rumia o Cola Armadura",
+        "video_url": "",
+          "page_url": "",
+           "pokemon_name": "",
+             "pokemon_num": ""
+      },
+        {
+        "id": "8",
+        "start_date": "1664577165000",
+        "start_date_string":"06 de octubre de 2022",
+        "end_date": "1664577165000",
+        "title": "Pokémon Scarlet y Violet: una nueva criatura y más mecánicas se muestran en el nuevo tráiler",
+        "sub_title": "Nuevo trailer y criatura de Paldea",
+            "img_new_pokemon": "",
+        "thumbnail": "https://i0.wp.com/www.cpokemon.com/wp-content/uploads/2022/10/nuevo-trailer-pokemon-scarletviolet-2.jpg?ssl=1&resize=300%2C170&zoom=2",
+        "image_url": "https://www.cpokemon.com/wp-content/uploads/2022/10/nuevo-trailer-pokemon-scarletviolet-2.jpg.webp",
+        "description": "El nuevo gameplay de Pokémon Scarlet y Violet presenta a Farigiraf, la evolución de Girafarig en Paldea, Pícnics para pasar el tiempo con tus Pokémon y la Máquina MT para fabricar tus propias MT. \n\nUn nuevo tráiler de Pokémon Scarlet y Violet (Escarlata y Púrpura) ha sido revelado en el día de hoy. \n\nSe trata de un gameplay de 14 minutos donde muestran algunas novedades, desde la evolución de Girafarig hasta nuevas formas para pasar el tiempo con nuestros Pokémon, personalización del personaje, selfies y la mecánica de los MT y más. \n\nPícnics\n\n En Pokémon Scarlet y Violet podrás ir de Pícnic en cualquier parte de la extensa región, pudiendo cambiar los diseños del mantel de la mesa, vasos, termos y otros objetos de pícnic para crear un entorno a tu gusto. Cuando un Pokémon come un sándwich, no solo restaura sus Puntos de Salud (PS), también tendrá efectos que le servirán durante la aventura. \n\nCuidado y limpieza de tus Pokémon \n\nEn estos títulos, cuando los Pokémon caminan junto a ti o entablan un combate, comenzarán a ensuciarse. Al bañar a los Pokémon en el Pícnic, no solo tendrán una lustradita magistral, también recuperarán sus Puntos de Salud (PS) y tendrán un vínculo más fuerte contigo. \n\nMecánica para fabricar MTs\n\nLas Máquinas Técnicas (MT para abreviar) son una herramienta que permite a los Pokémon aprender nuevos movimientos. En Pokémon Scarlet y Violet, hay una instalación equipada en los Centro Pokémon llamada Máquina MT, que te permitirá crear tus propias MTs.",
+        "video_url": "TYW7jGVPgVo",
+          "page_url": "",
+           "pokemon_name": "",
+             "pokemon_num": ""
+      },
        {
         "id": "7",
         "start_date": "1664577165000",
@@ -98,21 +131,6 @@
           "page_url": "https://pokemongolive.com/es_mx/post/test-your-mettle/",
                     "pokemon_name": "",
              "pokemon_num": ""
-      },
-      {
-        "id": "1",
-        "start_date": "1664577165000",
-           "start_date_string":"7 de septiembre de 2022",
-        "end_date": "1664577165000",
-        "title": "Día de la Comunidad de septiembre de 2022: Roggenrola",
-        "sub_title": "¡Día de la Comunidad: Roggenrola!",
-        "thumbnail": "https://lh3.googleusercontent.com/N97SGHEpUyoSnOrth76oI05jpBGXuadccj8iF_VLtjFKGOP3eHjp5fhoNMEyGPoL2EF1C2cO6xbs8NWwW1D7aluubVqhDOiJJfQvu1hDtNwM=e365-w800",
-        "image_url": "https://lh3.googleusercontent.com/N97SGHEpUyoSnOrth76oI05jpBGXuadccj8iF_VLtjFKGOP3eHjp5fhoNMEyGPoL2EF1C2cO6xbs8NWwW1D7aluubVqhDOiJJfQvu1hDtNwM=s0",
-        "description": "Domingo, 18 de septiembre de 2022, de 14:00 a 17:00 (hora local) Entrenadores: Nos complace anunciar que Roggenrola, el Pokémon Manto, será el destacado durante el Día de la Comunidad de septiembre.",
-        "videoUrl": "",
-          "page_url": "https://pokemongolive.com/es_mx/post/community-day-september-2022-roggenrola/",
-                    "pokemon_name": "Roggenrola",
-             "pokemon_num": "524"
       }
     ]
   }
