--- a/data/news
+++ b/data/news
@@ -9,7 +9,7 @@
     "results": [
     
     {
-        "id": "9",
+        "id": "11",
         "start_date": "1664577165000",
         "start_date_string":"06 de octubre de 2022",
         "end_date": "1664577165000",
@@ -25,7 +25,7 @@
              "pokemon_num": ""
       },
         {
-        "id": "8",
+        "id": "10",
         "start_date": "1664577165000",
         "start_date_string":"06 de octubre de 2022",
         "end_date": "1664577165000",
@@ -39,6 +39,37 @@
           "page_url": "",
            "pokemon_name": "",
              "pokemon_num": ""
+      },
+         {
+        "id": "9",
+        "start_date": "1664577165000",
+        "start_date_string":"06 de octubre de 2022",
+        "end_date": "1664577165000",
+        "title": "Día de la Comunidad clásico: Soñando con Dratini",
+        "sub_title": "Dia de la comunidad clásico",
+            "img_new_pokemon": "",
+        "thumbnail": "https://lh3.googleusercontent.com/Z0_4T7lwrChfHJbDaX7ESZz7NnAl1hdgAELQP19REAuYJnK-vzoqloSTl8C31AQLCzd7NoCw3cvPbIjm1U9CSlliVKzX0gPiv8GOoUz_dxnf=e365-w800",
+        "image_url": "https://lh3.googleusercontent.com/Z0_4T7lwrChfHJbDaX7ESZz7NnAl1hdgAELQP19REAuYJnK-vzoqloSTl8C31AQLCzd7NoCw3cvPbIjm1U9CSlliVKzX0gPiv8GOoUz_dxnf=s0",
+        "description": "Día de la Comunidad clásico de noviembre de 2022: Dratini\n\nSábado, 5 de noviembre de 2022, de 14:00 a 17:00, hora local\n\nEntrenadores:\n\n¡El Día de la Comunidad clásico vuelve en noviembre! ¡El evento tendrá como destacado a Dratini, el Pokémon Dragón!",
+
+          "page_url": "",
+           "pokemon_name": "Dratini",
+             "pokemon_num": "147"
+      },
+         {
+        "id": "8",
+        "start_date": "1664577165000",
+        "start_date_string":"05 de octubre de 2022",
+        "end_date": "1664577165000",
+        "title": "Festival de las Luces 2022: pon un toque de luz en tu vida con los debuts de nuevos Pokémon y con encuentros deslumbrantes",
+        "sub_title": "Festival de la luz",
+            "img_new_pokemon": "",
+        "thumbnail": "https://lh3.googleusercontent.com/nLqOUDTmHR1PBnZmE2p1gWL6nKagHaZ17KpxkMm5ylKBiTayBfnF9xDxl3mS502LhiSNh0GldQADPHFL1fOYohwgvoQFZxxqmNZHbpmA_HK1Qg=e365-w800",
+        "image_url": "https://www.cpokemon.com/wp-content/uploads/2022/10/nuevo-trailer-pokemon-scarletviolet-2.jpg.webp",
+        "description": "Entrenadores:\n\nEl Festival de las Luces es un evento ideal para estrechar lazos con los que os rodean, incluyendo vuestros Pokémon. Celebradlo con nosotros explorando el mundo y descubriendo Pokémon luminiscentes como Morelull, ¡que debuta en Pokémon GO!\n\nPor si fuera poco, según nuestra investigación, durante el evento algunos Pokémon brillarán por la noche, ¡así que aseguraos de buscarlos mientras podáis!\n\nFestival de las Luces\n\nDesde el viernes, 14 de octubre de 2022 a las 10:00, hasta el lunes, 17 de octubre de 2022 a las 20:00 (hora local)\n\nDebuts de Pokémon\n\n¡Morelull y Shiinotic, los Pokémon Luminiscentes, debutarán en Pokémon GO!\n* *Podéis utilizar 50 Caramelos de Morelull para evolucionar un Morelull en Shiinotic.",
+          "page_url": "",
+           "pokemon_name": "Morelull",
+             "pokemon_num": "755"
       },
        {
         "id": "7",
