--- a/data/news
+++ b/data/news
@@ -62,10 +62,10 @@
         "start_date_string":"05 de octubre de 2022",
         "end_date": "1664577165000",
         "title": "Festival de las Luces 2022: pon un toque de luz en tu vida con los debuts de nuevos Pokémon y con encuentros deslumbrantes",
-        "sub_title": "Festival de la luz",
+        "sub_title": "Festival de las luces",
             "img_new_pokemon": "",
         "thumbnail": "https://lh3.googleusercontent.com/nLqOUDTmHR1PBnZmE2p1gWL6nKagHaZ17KpxkMm5ylKBiTayBfnF9xDxl3mS502LhiSNh0GldQADPHFL1fOYohwgvoQFZxxqmNZHbpmA_HK1Qg=e365-w800",
-        "image_url": "https://www.cpokemon.com/wp-content/uploads/2022/10/nuevo-trailer-pokemon-scarletviolet-2.jpg.webp",
+        "image_url": "https://lh3.googleusercontent.com/nLqOUDTmHR1PBnZmE2p1gWL6nKagHaZ17KpxkMm5ylKBiTayBfnF9xDxl3mS502LhiSNh0GldQADPHFL1fOYohwgvoQFZxxqmNZHbpmA_HK1Qg=s0",
         "description": "Entrenadores:\n\nEl Festival de las Luces es un evento ideal para estrechar lazos con los que os rodean, incluyendo vuestros Pokémon. Celebradlo con nosotros explorando el mundo y descubriendo Pokémon luminiscentes como Morelull, ¡que debuta en Pokémon GO!\n\nPor si fuera poco, según nuestra investigación, durante el evento algunos Pokémon brillarán por la noche, ¡así que aseguraos de buscarlos mientras podáis!\n\nFestival de las Luces\n\nDesde el viernes, 14 de octubre de 2022 a las 10:00, hasta el lunes, 17 de octubre de 2022 a las 20:00 (hora local)\n\nDebuts de Pokémon\n\n¡Morelull y Shiinotic, los Pokémon Luminiscentes, debutarán en Pokémon GO!\n* *Podéis utilizar 50 Caramelos de Morelull para evolucionar un Morelull en Shiinotic.",
           "page_url": "",
            "pokemon_name": "Morelull",
