--- a/data/news
+++ b/data/news
@@ -75,7 +75,7 @@
            "pokemon_name": "Morelull",
              "pokemon_num": "755",
                    "pokemon_name_second": "shiinotic",
-             "pokemon_num_second": "756",
+             "pokemon_num_second": "756"
       },
        {
         "id": "7",
