--- a/data/news
+++ b/data/news
@@ -15,6 +15,7 @@
         "end_date": "1664577165000",
         "title": "Pokémon Scarlet y Violet: una nueva criatura y más mecánicas se muestran en el nuevo tráiler",
         "sub_title": "Farigiraf un nuevo Pokémon",
+             "name_new_pokemon": "Farigiraf",
             "img_new_pokemon": "https://www.cpokemon.com/wp-content/uploads/2022/10/scarlet-violet-pokemon-farigiraf-2-365x450.png.webp",
         "thumbnail": "https://www.cpokemon.com/wp-content/uploads/2022/10/habilidad-rumia-farigiraf-pokemonscarletviolet-795x450.jpg.webp",
         "image_url": "https://www.cpokemon.com/wp-content/uploads/2022/10/habilidad-rumia-farigiraf-pokemonscarletviolet-795x450.jpg.webp",
@@ -85,6 +86,7 @@
         "title": "Wiglett - Pokédex Escarlata y Púrpura",
         "sub_title": "Wiglett, en la pokedex",
             "img_new_pokemon": "https://www.cpokemon.com/wp-content/uploads/2022/09/wiglett-artwork-pokemon-escarlata-purpura-415x450.png.webp",
+                "name_new_pokemon": "Wiglet",
         "thumbnail": "https://i2.wp.com/www.cpokemon.com/wp-content/uploads/2022/09/wiglett-pokedex-pokemon-escarlata-purpura.jpg?ssl=1&resize=300%2C170&zoom=2",
         "image_url": "https://www.cpokemon.com/wp-content/uploads/2022/09/wiglett-captura-pokemon-escarlata-purpura-800x450.jpg.webp",
         "description": "Wiglett (ウミディグダ Umidiguda en japonés) es un Pokémon de tipo Agua introducido en la novena generación de Pokémon Escarlata y Púrpura (Scarlet/Violet) para Nintendo Switch. El Pokémon Cóngrido, fue revelado el 28 de septiembre de 2022. \n Descripción \nCon su olfato excepcional, Wiglett puede percibir olores que estén hasta a 20 metros de distancia. Es un Pokémon asustadizo y se mantiene alerta de todo lo que ocurre a su alrededor. Si su olfato detecta la presencia de otro Pokémon en la zona, se mete bajo la arena para ocultarse. \n Wiglett se alimenta sacando su cuerpo a la superficie. Su cuerpo debajo de la arena es un misterio y se desconoce cuanto puede llegar a medir realmente. Su gran parecido con Diglett podría ser una coincidencia, resultado de la adaptación que tuvo a su entorno.",
