Add fragment regions and bottom navigation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,15 +2,20 @@
     <string name="app_name">Poke Monsters</string>
 
     <!-- Activity main-->
-    <string name="textview_pokedex">Pokedex</string>
-    <string name="search_textview_hint">¿Qué pokemon estas buscando?</string>
-    <string name="textview_news">NOTICIAS POKÉMON</string>
+    <string name="textview_regions">Regiones</string>
+    <string name="textview_recent">Lo mas reciente</string>
+    <string name="search_textview_hint">Busca un pokémon</string>
+
+    <string name="textview_news">Noticias</string>
     <string name="error_download_news">Ocurrio un error al recuperar las noticias</string>
 
+
+    <!--Menu home-->
+    <string name="menu_news">Noticias</string>
+    <string name="menu_pokemon">Pokémon</string>
 
     <!--Msg General-->
     <string name="general_error">Ocurrio un error intenta más tarde</string>
     <string name="internet_conextion">Error de conexión intenta más tarde</string>
-
 
 </resources>
