--- a/data/news
+++ b/data/news
@@ -12,10 +12,10 @@
         "start_date_string": "12 de octubre de 2022",
         "end_date": "1664577165000",
         "title": "Revelada e-Nigma, la nueva líder de gimnasio de Pokémon Scarlet & Violet",
-        "sub_title": "Revelada e-Nigma lider en Paldea",
-        "thumbnail": "https://i0.wp.com/www.cpokemon.com/wp-content/uploads/2022/10/e-nigma-electrostreamer-pokemonscarletviolet.jpg?ssl=1&resize=300%2C170&zoom=2",
+        "sub_title": "Conoce a e-Nigma",
+        "thumbnail": "https://scarletviolet.pokemon.com/_images/news/oct_14/10_14_video.jpg",
         "image_url": "https://www.cpokemon.com/wp-content/uploads/2022/10/artwork-e-nigma-electrostreamer-pokemonscarletviolet.jpg.webp",
-        "description": "e-Nigma, especialista en los Pokémon de tipo Eléctrico es una de las líderes de gimnasio de la región de Paldea, y además es influencer!\n\nEl canal oficial de Pokémon en YouTube presentó a través de una transmisión en «vivo» a un nuevo personaje de Pokémon Scarlet & Violet (Escarlata y Púrpura).\n\nSe trata de la electrostreamer e-Nigma (Iono), líder del Gimnasio de Ciudad Leudal, especialista en los Pokémon de tipo Eléctrico. e-Nigma es una influencer de la región de Paldea, y si bien parece que lleva unos Magnemite en la cabeza, en realidad son dos broches para el cabello.\n\nEn el tráiler de presentación nos invita a jugar con ella para adivinar quién es su compañero Pokémon. ¿Qué opinan?",
+        "description": "Conoce a e-Nigma, la influencer, streamer y Líder de Gimnasio experta en Pokémon de tipo Eléctrico.\n\ne-Nigma, especialista en los Pokémon de tipo Eléctrico es una de las líderes de gimnasio de la región de Paldea, y además es influencer!\n\nEl canal oficial de Pokémon en YouTube presentó a través de una transmisión en «vivo» a un nuevo personaje de Pokémon Scarlet & Violet (Escarlata y Púrpura).\n\nSe trata de la electrostreamer e-Nigma (Iono), líder del Gimnasio de Ciudad Leudal, especialista en los Pokémon de tipo Eléctrico. e-Nigma es una influencer de la región de Paldea, y si bien parece que lleva unos Magnemite en la cabeza, en realidad son dos broches para el cabello.\n\nEn el tráiler de presentación nos invita a jugar con ella para adivinar quién es su compañero Pokémon. ¿Qué opinan?",
         "page_url": "https://www.cpokemon.com/2022/10/12/revelada-e-nigma-la-nueva-lider-de-gimnasio-de-pokemon-scarlet-violet/",
          "video_url": "Q7lGNl8ULHg"
       },
