--- a/data/news
+++ b/data/news
@@ -19,23 +19,10 @@
         "page_url": "https://www.cpokemon.com/2022/10/12/revelada-e-nigma-la-nueva-lider-de-gimnasio-de-pokemon-scarlet-violet/",
          "video_url": "Q7lGNl8ULHg"
       },
-       {
+      {
         "id": "12",
         "start_date": "1664577165000",
         "start_date_string": "07 de octubre de 2022",
-        "end_date": "1664577165000",
-        "title": "Revelada e-Nigma, la nueva líder de gimnasio de Pokémon Scarlet & Violet",
-        "sub_title": "Conoce a e-Nigma",
-        "thumbnail": "https://scarletviolet.pokemon.com/_images/news/oct_14/10_14_video.jpg",
-        "image_url": "https://www.cpokemon.com/wp-content/uploads/2022/10/artwork-e-nigma-electrostreamer-pokemonscarletviolet.jpg.webp",
-        "description": "Conoce a e-Nigma, la influencer, streamer y Líder de Gimnasio experta en Pokémon de tipo Eléctrico.\n\ne-Nigma, especialista en los Pokémon de tipo Eléctrico es una de las líderes de gimnasio de la región de Paldea, y además es influencer!\n\nEl canal oficial de Pokémon en YouTube presentó a través de una transmisión en «vivo» a un nuevo personaje de Pokémon Scarlet & Violet (Escarlata y Púrpura).\n\nSe trata de la electrostreamer e-Nigma (Iono), líder del Gimnasio de Ciudad Leudal, especialista en los Pokémon de tipo Eléctrico. e-Nigma es una influencer de la región de Paldea, y si bien parece que lleva unos Magnemite en la cabeza, en realidad son dos broches para el cabello.\n\nEn el tráiler de presentación nos invita a jugar con ella para adivinar quién es su compañero Pokémon. ¿Qué opinan?",
-        "page_url": "https://www.cpokemon.com/2022/10/12/revelada-e-nigma-la-nueva-lider-de-gimnasio-de-pokemon-scarlet-violet/",
-         "video_url": "Q7lGNl8ULHg"
-      },
-      {
-        "id": "11",
-        "start_date": "1664577165000",
-        "start_date_string": "06 de octubre de 2022",
         "end_date": "1664577165000",
         "title": "El nuevo tráiler de Pokémon Escarlata y Púrpura revela por error 5 nuevos Pokémon",
         "sub_title": "Se revelan por error 5 nuevos pokémon",
@@ -43,6 +30,21 @@
         "thumbnail": "https://media.vandal.net/i/1280x720/10-2022/202210717581774_1.jpg.webp",
         "image_url": "https://media.vandal.net/i/1280x720/10-2022/202210717581774_1.jpg.webp",
         "description": "La versión para Occidente del completo gameplay cercano a los 15 minutos de Pokémon Escarlata y Púrpura muestra una versión anterior a la de la versión japonesa y revela cinco criaturas.\n\nPokémon Escarlata y Púrpura se mostraron ayer en un completo gameplay cercano a los quince minutos de duración en el que se ahondó en algunas de las mecánicas básicas del título. En dicho tráiler se reveló la existencia de un nuevo Pokémon conocido como Farigiraf, el cual es una evolución directa de Girafarig. Sin embargo, según han reportado varios medios, hasta cinco nuevos monstruos de bolsillos fueron revelados por error en el tráiler que recibimos en Occidente, y es que al parecer la versión japonesa no incluye algunas imágenes que sí se muestran en esta.\n\n"
+      },
+      {
+        "id": "11",
+        "start_date": "1664577165000",
+        "start_date_string": "06 de octubre de 2022",
+        "end_date": "1664577165000",
+        "title": "Pokémon Scarlet y Violet: una nueva criatura y más mecánicas se muestran en el nuevo tráiler",
+        "sub_title": "Farigiraf un nuevo Pokémon",
+        "img_new_pokemon": "https://www.cpokemon.com/wp-content/uploads/2022/10/scarlet-violet-pokemon-farigiraf-2-365x450.png.webp",
+        "thumbnail": "https://www.cpokemon.com/wp-content/uploads/2022/10/habilidad-rumia-farigiraf-pokemonscarletviolet-795x450.jpg.webp",
+        "image_url": "https://www.cpokemon.com/wp-content/uploads/2022/10/habilidad-rumia-farigiraf-pokemonscarletviolet-795x450.jpg.webp",
+        "description": "Farigiraf es el resultado de la evolución de los Girafarig que viven en la región de Paldea. Su cabeza principal y la de su cola se han fusionado para formar una sola. Los dos cerebros de Farigiraf están conectados por sus gruesos nervios, incrementando su energía psíquica, y gracias a eso puede emitir ondas psíquicas desde la antena de su cabeza. \n\n Rumia \n\n Farigiraf tiene una nueva habilidad llamada Rumia (Cud Chew). Cuando un Pokémon con esta habilidad come una Baya, puede comer una más al final del turno siguiente. \n\n Cola Armadura \n\nTambién tiene otra nueva habilidad presentada en estos juegos llamada Cola Armadura (Armor Tail). Esta habilidad hace que los oponentes no puedan utilizar sus movimientos con prioridad. \n\nDatos de Farigiraf\n\n* Categoría: Pokémon Gran Cuello\n* Tipo: Normal y Psíquico \n* Altura: 3,2 m \n* Peso: 160 kg \n* Habilidad: Rumia o Cola Armadura",
+        "page_url": "",
+        "pokemon_name": "",
+        "pokemon_num": ""
       },
       {
         "id": "10",
